--- a/src/detailsPage/index.html
+++ b/src/detailsPage/index.html
@@ -10,7 +10,7 @@
   </head>
   <body class="p-4">
     <nav class="mb-4">
-      <a href="../index.html" class="me-3">Lista paczek</a>
+      <a href="../../index.html" class="me-3">Lista paczek</a>
       <a href="../formPage/index.html" class="me-3">Dodaj paczkę</a>
     </nav>
 
@@ -20,6 +20,6 @@
       <!-- szczegóły paczki powstają w kolejnych ticketach -->
     </div>
 
-    <script src="./index.js"></script>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
