--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <body class="p-4">
     <nav class="mb-4">
-      <a href="./index.html" class="me-3">Lista paczek</a>
-      <a href="./src/formpage/index.html">Dodaj paczkę</a>
+      <a href="index.html" class="me-3">Lista paczek</a>
+      <a href="/src/formpage/index.html">Dodaj paczkę</a>
     </nav>
 
     <h1>FastShip CRM</h1>
@@ -41,6 +41,8 @@
             <th>ID</th>
             <th>Nadawca</th>
             <th>Odbiorca</th>
+            <th>Priorytet</th>
+            <th>Waga</th>
             <th>Status</th>
             <th>Data nadania</th>
             <th>Akcje</th>
